[package]
name = "snipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive", "cargo"] }
reqwest = "0.11.18"
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
ethers = "2.0.8"
anyhow = "1.0.72"
serde_json = "1.0.103"
chrono = "0.4.26"
chrono-tz = "0.8.3"
