[package]
name = "snipe"
version = "0.1.1"
authors = ["0xcacti"]
edition = "2021"
description = "Ethereum block and time converter"
license = "MIT"
documentation = "https://docs.rs/snipe"
readme = "README.md"
repository = "https://github.com/0xcacti/snipe"
homepage = "https://github.com/0xcacti/snipe"

[dependencies]
clap = { version = "4.3.1", features = ["derive", "cargo"] }
reqwest = "0.11.18"
tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
ethers = "2.0.8"
anyhow = "1.0.72"
serde_json = "1.0.103"
chrono = "0.4.26"
chrono-tz = "0.8.3"
